# lift_solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lift_solver/: __init__.py  attachment_point.py  constraint.py  lift_problem.py  lift_solver.py  rigid_body.py  rigid_body_base.py  shackle.py  sling.py  solver.py  visual_geometry.py
src/lift_solver/data/shackles/: crosby_shackles.csv  gn_shackles.csv  gp_shackles.csv  shackle_gp800.stl  shackle_gp800_wb.stl
src/lift_solver/data/shackles/reference/: shackles.xlsx
webapp/: index.html
webapp/assets/: sample.yaml
webapp/js/: app.js  renderer.js  solver.js
webapp/js/sling/: GeometryUtils.js  SlingAssemblyBuilder.js  SlingEye.js  SlingSheave.js  TubeFactory.js
